# dynamo

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  Cargo.toml  README.md  bench_c_disagg.py  bench_d_final.py  bench_d_results.json  conftest.py  exp_c_disagg_docker.sh  exp_d_kvbm_launch.sh  pyproject.toml
.ai/: pytest-guidelines.md  test-model-size-guardrails.md
.cargo/: config.toml
.devcontainer/: post-create.sh
.github/: FILTERS.md  filters.yaml
.github/workflows/: aws-dev-02-kvbm-tests.yml  dynamo-pipeline.yml  fern-docs.yml  nightly-ci.yml  post-merge-ci.yml  pr-xpu.yaml  pr.yaml  pre-merge.yml  release.yml  shared-build-image.yml  shared-compliance.yml  shared-copy.yml  shared-test.yml  xpu-ci.yaml
benchmarks/agent_trace/: README.md  convert_to_perfetto.py  validate_convert_to_perfetto.py
benchmarks/frontend/: README.md
components/power_agent/: Dockerfile  README.md  actuator.py  logger.py  managed_state.py  power_agent.py
components/src/: conftest.py
container/: Dockerfile.template  Dockerfile.test  README.md  context.yaml  render.py  use-sccache.sh
container/compliance/: README.md
container/templates/: args.Dockerfile  dev.Dockerfile  dynamo_runtime.Dockerfile  frontend.Dockerfile  planner.Dockerfile  sglang_runtime.Dockerfile  trtllm_framework.Dockerfile  trtllm_runtime.Dockerfile  vllm_framework.Dockerfile  vllm_runtime.Dockerfile  wheel_builder.Dockerfile
deploy/: docker-observability.yml  planner-pod-rbac-dev.yaml  sanity_check.py
deploy/inference-gateway/pd-sidecar/: Cargo.toml  Dockerfile
deploy/inference-gateway/pd-sidecar/src/: main.rs
deploy/observability/: README.md
deploy/operator/: Makefile  Tiltfile
deploy/snapshot/: Dockerfile
deploy/utils/: dynamo_deployment.py
dev/: sanity_check.py
docs/: README.md  contribution-guide.md  index.yml
docs/agents/: README.md  agent-hints.md  agent-tracing.md  reasoning.md
docs/benchmarks/: embedding_cache.md  kv-router-ab-testing.md  mocker-trace-replay.md  planner-replay-benchmarking.md
docs/design-docs/: architecture.md  disagg-serving.md  distributed-runtime.md  dynamo-flow.md  multi-tenant-test.md  planner-design.md  power-agent-dual-actuator.md  power-agent-helm-chart-plan.md  router-design.md
docs/development/: backend-guide.md  python-backend-guide.md  runtime-guide.md  rust-backend-guide.md
docs/digest/: README.md  index.mdx
docs/fault-tolerance/: README.md  graceful-shutdown.md  (+2 more)
fern/: docs.yml
lib/gms_kv_ring/rust_ring/: Cargo.toml  pyproject.toml
lib/gms_kv_ring/rust_ring/src/: lib.rs
lib/kv-hashing/: Cargo.toml  README.md
lib/kv-hashing/src/: block.rs  compute.rs  error.rs  lib.rs  request.rs  salt.rs
lib/kv-hashing/tests/: request_hashing.rs  serde_roundtrip.rs
recipes/: README.md  gaie_checks.sh
tests/: README.md  conftest.py  report_pytest_markers.py  test_predownload_models.py
(+1846 files in other folders)
