# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-pd-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Decode-side P/D routing sidecar for vanilla vLLM disaggregation (runs the NIXL kv_transfer_params handshake driven by the EPP's x-prefiller-host-port header)"

[[bin]]
name = "dynamo-pd-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
